[project]
name = "cybersecurity-tools"
version = "0.1.0"
description = "A collection of simple Python tools for password checking and basic firewall functionality."
authors = [
    { name = "cyb3r-cych0", email = "minigates21@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13.7"
dependencies = [
    "scapy>=2.6.1"
]

[project.urls]
homepage = "https://github.com/cyb3r-cych0/"
repository = "https://github.com/ycyb3r-cych0/cybersecurity"
